fix: header banner is now responsive on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -201,10 +201,7 @@ header.masthead .intro-text .intro-heading {
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-@media (min-width: 768px) {
-  header.masthead {
-    background-image: url("../img/header-bg.mobi.jpg");
-  }
+/*@media (min-width: 768px) {*/
   header.masthead .intro-text {
     padding-top: 300px;
     padding-bottom: 200px;
@@ -223,7 +220,7 @@ header.masthead .intro-text .intro-heading {
     margin-bottom: 50px;
     font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   }
-}
+/*}*/
 
 .service-heading {
   margin: 15px 0;
